--- a/app/assets/stylesheets/desktop/logInPage/logInPage.scss
+++ b/app/assets/stylesheets/desktop/logInPage/logInPage.scss
@@ -2,7 +2,6 @@
 	.log-in-page{
 		position: relative;
 		height: 100vh;
-		width: 100vw;
 		overflow: hidden;
 		text-align: center;
 		display: flex;
